<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>io.arcpredict</groupId>
    <artifactId>backend</artifactId>
    <version>1.0.0</version>

    <name>ArcPredict Backend</name>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.0</version>
    </parent>

    <properties>
        <java.version>21</java.version>
        <web3j.version>4.12.3</web3j.version>
    </properties>

    <dependencies>

        <!-- REST -->

        <dependency>
            <groupId>
                org.springframework.boot
            </groupId>
            <artifactId>
                spring-boot-starter-web
            </artifactId>
        </dependency>

        <!-- Spring Boot Actuator -->

        <dependency>
            <groupId>
                org.springframework.boot
            </groupId>
            <artifactId>
                spring-boot-starter-actuator
            </artifactId>
        </dependency>

        <!-- WebSocket -->

        <dependency>
            <groupId>
                org.springframework.boot
            </groupId>
            <artifactId>
                spring-boot-starter-websocket
            </artifactId>
        </dependency>

        <!-- Security -->

        <dependency>
            <groupId>
                org.springframework.boot
            </groupId>
            <artifactId>
                spring-boot-starter-security
            </artifactId>
        </dependency>

        <!-- JPA -->

        <dependency>
            <groupId>
                org.springframework.boot
            </groupId>
            <artifactId>
                spring-boot-starter-data-jpa
            </artifactId>
        </dependency>

        <!-- PostgreSQL -->

        <dependency>
            <groupId>
                org.postgresql
            </groupId>
            <artifactId>
                postgresql
            </artifactId>
        </dependency>

        <!-- H2 -->

        <dependency>
            <groupId>
                com.h2database
            </groupId>
            <artifactId>
                h2
            </artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Validation -->

        <dependency>
            <groupId>
                org.springframework.boot
            </groupId>
            <artifactId>
                spring-boot-starter-validation
            </artifactId>
        </dependency>

        <!-- Spring Retry -->

<dependency>
    <groupId>
        org.springframework.retry
    </groupId>
    <artifactId>
        spring-retry
    </artifactId>
</dependency>

        <!-- Web3 -->

        <dependency>
            <groupId>
                org.web3j
            </groupId>
            <artifactId>
                core
            </artifactId>
            <version>
                ${web3j.version}
            </version>
        </dependency>

        <!-- Lombok -->

        <dependency>
            <groupId>
                org.projectlombok
            </groupId>
            <artifactId>
                lombok
            </artifactId>
            <scope>
                provided
            </scope>
        </dependency>

        <!-- Jackson -->

        <dependency>
            <groupId>
                com.fasterxml.jackson.core
            </groupId>
            <artifactId>
                jackson-databind
            </artifactId>
        </dependency>

        <!-- Test -->

        <dependency>
            <groupId>
                org.springframework.boot
            </groupId>
            <artifactId>
                spring-boot-starter-test
            </artifactId>
            <scope>
                test
            </scope>
        </dependency>

        <!-- OpenAPI / Swagger -->

        <dependency>
            <groupId>
                org.springdoc
            </groupId>
            <artifactId>
                springdoc-openapi-starter-webmvc-ui
            </artifactId>
            <version>
                2.8.9
            </version>
        </dependency>

    </dependencies>

    <build>

        <plugins>

            <plugin>
                <groupId>
                    org.springframework.boot
                </groupId>
                <artifactId>
                    spring-boot-maven-plugin
                </artifactId>
            </plugin>

            <plugin>
                <groupId>
                    org.apache.maven.plugins
                </groupId>
                <artifactId>
                    maven-compiler-plugin
                </artifactId>

                <configuration>

                    <annotationProcessorPaths>

                        <path>
                            <groupId>
                                org.projectlombok
                            </groupId>

                            <artifactId>
                                lombok
                            </artifactId>

                            <version>
                                1.18.38
                            </version>

                        </path>

                    </annotationProcessorPaths>

                </configuration>

            </plugin>

            <!-- JaCoCo Code Coverage -->

            <plugin>

                <groupId>
                    org.jacoco
                </groupId>

                <artifactId>
                    jacoco-maven-plugin
                </artifactId>

                <version>
                    0.8.12
                </version>

                <executions>

                    <execution>

                        <goals>

                            <goal>
                                prepare-agent
                            </goal>

                        </goals>

                    </execution>

                    <execution>

                        <id>
                            report
                        </id>

                        <phase>
                            verify
                        </phase>

                        <goals>

                            <goal>
                                report
                            </goal>

                        </goals>

                    </execution>

                </executions>

            </plugin>

        </plugins>

    </build>

</project>